Getting code to work on windows again

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.0)
 
 # set(CMAKE_C_COMPILER /opt/local/bin/gcc)
 # set(CMAKE_CXX_COMPILER /opt/local/bin/g++)
@@ -32,7 +32,7 @@ endif()
 
 if (WIN32)
         subdirs(ch_arrays ch_control_structures ch_data_structures
-               ch_functions ch_input_output ch_iterating ch_oop ch_operators ch_strings ch_variables ch_vector_and_lists ch_threads)
+               ch_functions ch_input_output ch_iterating ch_matrices ch_oop ch_operators ch_strings ch_variables ch_vector_and_lists ch_threads)
 else()
         subdirs(ch_arrays ch_control_structures ch_cpp_fortran ch_data_structures
                ch_functions ch_input_output ch_iterating ch_matrices ch_oop ch_operators ch_strings ch_variables ch_vector_and_lists)
