--- a/ch_matrices/CMakeLists.txt
+++ b/ch_matrices/CMakeLists.txt
@@ -15,35 +15,35 @@ endif()
 
 add_executable(matrix1 matrix1.cpp)
 if(WIN32)
-target_link_libraries(matrix1 openblas)
+target_link_libraries(matrix1 armadillo openblas)
 else()
 target_link_libraries(matrix1 armadillo blas lapack)
 endif()
 
 add_executable(matrix2 matrix2.cpp)
 if(WIN32)
-target_link_libraries(matrix2 openblas)
+target_link_libraries(matrix2 armadillo openblas)
 else()
 target_link_libraries(matrix2 armadillo blas lapack)
 endif()
 
 add_executable(matrix3 matrix3.cpp calfem.h calfem.cpp)
 if(WIN32)
-target_link_libraries(matrix3 openblas)
+target_link_libraries(matrix3 armadillo openblas)
 else()
 target_link_libraries(matrix3 armadillo blas lapack)
 endif()
 
 add_executable(matrix4 matrix4.cpp calfem.h calfem.cpp)
 if(WIN32)
-target_link_libraries(matrix4 openblas)
+target_link_libraries(matrix4 armadillo openblas)
 else()
 target_link_libraries(matrix4 armadillo blas lapack)
 endif()
 
 add_executable(matrix5 matrix5.cpp calfem.h calfem.cpp)
 if(WIN32)
-target_link_libraries(matrix5 openblas)
+target_link_libraries(matrix5 armadillo openblas)
 else()
 target_link_libraries(matrix5 armadillo blas lapack)
 endif()
