--- a/ch_qt/beam_app/CMakeLists.txt
+++ b/ch_qt/beam_app/CMakeLists.txt
@@ -5,13 +5,13 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-#if(CMAKE_VERSION VERSION_LESS "3.7.0")
-    set(CMAKE_INCLUDE_CURRENT_DIR ON)
-#endif()
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
 
 find_package(Qt6 COMPONENTS Core Widgets Gui Qml Quick Qml Charts REQUIRED)
-
-#message(${Qt5_FIND_COMPONENTS})
+if (NOT Qt6_FOUND)
+    find_package(Qt5 5.15 REQUIRED COMPONENTS Core Widgets Gui Qml Quick Qml Charts)
+endif()
 
 add_executable(beam_app
     beam_app_resource.qrc
@@ -29,7 +29,4 @@ add_executable(beam_app
     main.cpp
 )
 
-# resources.qrc
-
-
-target_link_libraries(beam_app Qt6::Widgets Qt6::Core Qt6::Gui Qt6::Qml Qt6::Quick Qt6::Charts)
+target_link_libraries(beam_app Qt::Widgets Qt::Core Qt::Gui Qt::Qml Qt::Quick Qt::Charts)
