--- a/ch_qt/calculator/CMakeLists.txt
+++ b/ch_qt/calculator/CMakeLists.txt
@@ -5,12 +5,12 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-if(CMAKE_VERSION VERSION_LESS "3.7.0")
-    set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+find_package(Qt6 COMPONENTS Core Widgets Gui Qml Quick Qml Charts REQUIRED)
+if (NOT Qt6_FOUND)
+    find_package(Qt5 5.15 REQUIRED COMPONENTS Core Widgets Gui Qml Quick Qml Charts)
 endif()
-
-find_package(Qt6 COMPONENTS Core Widgets Gui Qml Quick Qml REQUIRED)
-
 #message(${Qt5_FIND_COMPONENTS})
 
 add_executable(calculator
@@ -21,4 +21,4 @@ add_executable(calculator
 
 # resources.qrc
 
-target_link_libraries(calculator Qt6::Widgets Qt6::Core Qt6::Gui Qt6::Qml Qt6::Quick)
+target_link_libraries(calculator Qt::Widgets Qt::Core Qt::Gui Qt::Qml Qt::Quick)
