--- a/ch_qt/qt3d1/CMakeLists.txt
+++ b/ch_qt/qt3d1/CMakeLists.txt
@@ -5,13 +5,12 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-#if(CMAKE_VERSION VERSION_LESS "3.7.0")
-    set(CMAKE_INCLUDE_CURRENT_DIR ON)
-#endif()
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 find_package(Qt6 COMPONENTS 3DCore 3DExtras 3DInput 3DRender Core Widgets Gui Qml Quick Qml Charts REQUIRED)
-
-#message(${Qt5_FIND_COMPONENTS})
+if (NOT Qt6_FOUND)
+    find_package(Qt5 5.15 REQUIRED COMPONENTS 3DCore 3DExtras 3DInput 3DRender Core Widgets Gui Qml Quick Qml Charts)
+endif()
 
 add_executable(qt3d1
     mainwindow.ui
@@ -20,15 +19,13 @@ add_executable(qt3d1
     main.cpp
 )
 
-# resources.qrc
-
 target_link_libraries(qt3d1
-    Qt6::Widgets
-    Qt6::Core
-    Qt6::Gui
-    Qt6::Qml
-    Qt6::Quick
-    Qt6::Charts
+    Qt::Widgets
+    Qt::Core
+    Qt::Gui
+    Qt::Qml
+    Qt::Quick
+    Qt::Charts
     Qt::3DCore
     Qt::3DExtras
     Qt::3DInput
