Updatin Qt examples to be able to compiler under Qt5

--- a/ch_qt/qt3d1/CMakeLists.txt
+++ b/ch_qt/qt3d1/CMakeLists.txt
@@ -7,9 +7,13 @@ set(CMAKE_AUTOUIC ON)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-find_package(Qt6 COMPONENTS 3DCore 3DExtras 3DInput 3DRender Core Widgets Gui Qml Quick Qml Charts REQUIRED)
-if (NOT Qt6_FOUND)
+if (UNIX)
     find_package(Qt5 5.15 REQUIRED COMPONENTS 3DCore 3DExtras 3DInput 3DRender Core Widgets Gui Qml Quick Qml Charts)
+else()
+    find_package(Qt6 COMPONENTS 3DCore 3DExtras 3DInput 3DRender Core Widgets Gui Qml Quick Qml Charts REQUIRED)
+    if (NOT Qt6_FOUND)
+        find_package(Qt5 5.15 REQUIRED COMPONENTS 3DCore 3DExtras 3DInput 3DRender Core Widgets Gui Qml Quick Qml Charts)
+    endif()
 endif()
 
 add_executable(qt3d1
