--- a/ch_qt/calculator/CMakeLists.txt
+++ b/ch_qt/calculator/CMakeLists.txt
@@ -7,11 +7,14 @@ set(CMAKE_AUTOUIC ON)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-find_package(Qt6 COMPONENTS Core Widgets Gui Qml Quick Qml Charts REQUIRED)
-if (NOT Qt6_FOUND)
+if (UNIX)
     find_package(Qt5 5.15 REQUIRED COMPONENTS Core Widgets Gui Qml Quick Qml Charts)
+else()
+    find_package(Qt6 COMPONENTS Core Widgets Gui Qml Quick Qml Charts REQUIRED)
+    if (NOT Qt6_FOUND)
+        find_package(Qt5 5.15 REQUIRED COMPONENTS Core Widgets Gui Qml Quick Qml Charts)
+    endif()
 endif()
-#message(${Qt5_FIND_COMPONENTS})
 
 add_executable(calculator
     mainwindow.ui
