--- a/ch_qt/plotting/CMakeLists.txt
+++ b/ch_qt/plotting/CMakeLists.txt
@@ -7,10 +7,15 @@ set(CMAKE_AUTOUIC ON)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-find_package(Qt6 COMPONENTS Core Widgets Gui Qml Quick Qml Charts REQUIRED)
-if (NOT Qt6_FOUND)
+if (UNIX)
     find_package(Qt5 5.15 REQUIRED COMPONENTS Core Widgets Gui Qml Quick Qml Charts)
+else()
+    find_package(Qt6 COMPONENTS Core Widgets Gui Qml Quick Qml Charts REQUIRED)
+    if (NOT Qt6_FOUND)
+        find_package(Qt5 5.15 REQUIRED COMPONENTS Core Widgets Gui Qml Quick Qml Charts)
+    endif()
 endif()
+
 
 add_executable(plotting
     mainwindow.ui
