--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,15 +1,13 @@
 site_name: Scientific Programming in C++
 nav:
 - Home: index.md
+- Introduction: intro.md
+- Building and running: build_and_run.md
 - Language: language.md
 
 
 theme: 
   name: material
-  palette:
-    scheme: youtube
-    #primary: LU
-    #accent: LU
   font:
     text: Roboto
     code: Roboto Mono
@@ -20,14 +18,29 @@ theme:
     - navigation.top
     - header.autohide
     - content.code.copy
-    
+  icon:
+    admonition:
+      note: fontawesome/solid/note-sticky
+      abstract: fontawesome/solid/book
+      info: fontawesome/solid/circle-info
+      tip: fontawesome/solid/bullhorn
+      success: fontawesome/solid/check
+      question: fontawesome/solid/circle-question
+      warning: fontawesome/solid/triangle-exclamation
+      failure: fontawesome/solid/bomb
+      danger: fontawesome/solid/skull
+      bug: fontawesome/solid/robot
+      example: fontawesome/solid/flask
+      quote: fontawesome/solid/quote-left    
+
 markdown_extensions:
   - admonition
   - attr_list
   - pymdownx.highlight:
       anchor_linenums: true
   - pymdownx.inlinehilite
-  - pymdownx.snippets
+  - pymdownx.snippets:
+      base_path: 'docs/'
   - pymdownx.superfences
   - pymdownx.tabbed:
       alternate_style: true 
