--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,9 +1,14 @@
 site_name: Scientific Programming in C++
 nav:
-- Home: index.md
-- Introduction: intro.md
+- Introduction: index.md
+- History: history.md
 - Building and running: build_and_run.md
 - Language: language.md
+- Organising code: code_org.md
+- Input and output: input_output.md
+- Data structures and algorithms: data_structures_algorithms.md
+- Object-oriented programming: oop.md
+- Mixed-language programming: mixed_language.md
 
 
 theme: 
@@ -14,8 +19,9 @@ theme:
   features:
     - navigation.instant    
     - navigation.tracking
-    - navigation.tabs
     - navigation.top
+    - navigation.path
+    - navigation.sections
     - header.autohide
     - content.code.copy
   icon:
@@ -36,14 +42,14 @@ theme:
 markdown_extensions:
   - admonition
   - attr_list
+  - pymdownx.tabbed:
+      alternate_style: true 
   - pymdownx.highlight:
       anchor_linenums: true
   - pymdownx.inlinehilite
   - pymdownx.snippets:
-      base_path: 'docs/'
+      restrict_base_path: false
   - pymdownx.superfences
-  - pymdownx.tabbed:
-      alternate_style: true 
   - admonition
   - pymdownx.details
   - pymdownx.emoji:
