More work course.

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -8,6 +8,7 @@ nav:
 - Input and output: input_output.md
 - Data structures and algorithms: data_structures_algorithms.md
 - Object-oriented programming: oop.md
+- Debugging: debugging.md
 - Mixed-language programming: mixed_language.md
 
 
