More work on language chapter.

--- a/ch_variables/CMakeLists.txt
+++ b/ch_variables/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable(char_types1 char_types1.cpp)
 add_executable(double_types1 double_types1.cpp)
 add_executable(numerical_limits numerical_limits.cpp)
 add_executable(enum_types enum_types.cpp)
+add_executable(class_enum class_enum.cpp)
 add_executable(array_types1 array_types1.cpp)
 add_executable(array_types2 array_types2.cpp)
 add_executable(pointers1 pointers1.cpp)
