--- a/ch_variables/CMakeLists.txt
+++ b/ch_variables/CMakeLists.txt
@@ -12,5 +12,5 @@ add_executable(pointers2 pointers2.cpp)
 add_executable(const_types const_types.cpp)
 add_executable(reference_type reference_type.cpp)
 add_executable(strucutured_type structured_type.cpp)
-add_executable(auto1 auto1.cpp)
-add_executable(auto2 auto2.cpp)
+add_executable(var_auto1 auto1.cpp)
+add_executable(var_auto2 auto2.cpp)
