--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.20)
 
 # set(CMAKE_C_COMPILER /opt/local/bin/gcc)
 # set(CMAKE_CXX_COMPILER /opt/local/bin/g++)
@@ -8,12 +8,23 @@ project(cpp_course C CXX)
 set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin )
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
+
 set(CMAKE_CXX_STANDARD 20)
 
-if (WIN32)
-        subdirs(ch_arrays ch_arrays_modern ch_control_structures ch_data_structures ch_qt
-               ch_functions ch_input_output ch_iterating ch_matrices ch_oop ch_operators ch_strings ch_variables ch_vector_and_lists ch_threads)
-else()
-        subdirs(ch_arrays ch_arrays_modern ch_control_structures ch_cpp_fortran ch_data_structures ch_modern ch_qt
-               ch_functions ch_input_output ch_iterating ch_matrices ch_oop ch_operators ch_strings ch_variables ch_vector_and_lists)
-endif()
+add_subdirectory(ch_arrays)
+add_subdirectory(ch_arrays_modern)
+add_subdirectory(ch_control_structures)
+#add_subdirectory(ch_cpp_fortran)
+add_subdirectory(ch_data_structures)
+add_subdirectory(ch_modern)
+add_subdirectory(ch_qt)
+add_subdirectory(ch_functions)
+add_subdirectory(ch_input_output)
+add_subdirectory(ch_iterating)
+add_subdirectory(ch_matrices)
+add_subdirectory(ch_oop)
+add_subdirectory(ch_operators)
+add_subdirectory(ch_strings)
+add_subdirectory(ch_variables)
+add_subdirectory(ch_vector_and_lists)
+add_subdirectory(ch_threads)
