--- a/ch_data_structures/CMakeLists.txt
+++ b/ch_data_structures/CMakeLists.txt
@@ -1,3 +1,5 @@
+
+add_executable(lambda1 lambda1.cpp)
 add_executable(vector1 vector1.cpp)
 add_executable(vector2 vector2.cpp)
 add_executable(vector3 vector3.cpp)
