--- a/ch_qt/qt3/CMakeLists.txt
+++ b/ch_qt/qt3/CMakeLists.txt
@@ -7,17 +7,11 @@ set(CMAKE_AUTOUIC ON)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
+find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui)
 
-if (UNIX)
-    find_package(Qt5 5.15 REQUIRED COMPONENTS Core Widgets Gui Qml Quick Qml Charts)
-else()
-    find_package(Qt6 COMPONENTS Core Widgets Gui Qml Quick Qml Charts REQUIRED)
-    if (NOT Qt6_FOUND)
-        find_package(Qt5 5.15 REQUIRED COMPONENTS Core Widgets Gui Qml Quick Qml Charts)
-    endif()
-endif()
+qt_standard_project_setup()
 
-add_executable(qt3
+qt_add_executable(qt3
     mainwindow.ui
     mainwindow.cpp
     main.cpp
@@ -25,4 +19,11 @@ add_executable(qt3
 
 # resources.qrc
 
-target_link_libraries(qt3 Qt::Widgets)
+target_link_libraries(qt3 PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui)
+
+set_target_properties(qt3 PROPERTIES
+    WIN32_EXECUTABLE ON
+    MACOSX_BUNDLE ON
+)
+
+
