More work on data structures.

--- a/ch_data_structures/CMakeLists.txt
+++ b/ch_data_structures/CMakeLists.txt
@@ -1,5 +1,8 @@
-
 add_executable(lambda1 lambda1.cpp)
+add_executable(lambda2 lambda2.cpp)
+add_executable(lambda3 lambda3.cpp)
+add_executable(lambda4 lambda4.cpp)
+add_executable(lambda5 lambda5.cpp)
 add_executable(vector1 vector1.cpp)
 add_executable(vector2 vector2.cpp)
 add_executable(vector3 vector3.cpp)
@@ -11,3 +14,6 @@ add_executable(operations1 operations1.cpp)
 add_executable(algo1 algo1.cpp)
 add_executable(algo2 algo2.cpp)
 add_executable(algo3 algo3.cpp)
+add_executable(copy1 copy1.cpp)
+add_executable(fill1 fill1.cpp)
+add_executable(numeric1 numeric1.cpp)
