More work on data structures.

--- a/ch_data_structures/CMakeLists.txt
+++ b/ch_data_structures/CMakeLists.txt
@@ -17,3 +17,5 @@ add_executable(algo3 algo3.cpp)
 add_executable(copy1 copy1.cpp)
 add_executable(fill1 fill1.cpp)
 add_executable(numeric1 numeric1.cpp)
+add_executable(transform1 transform1.cpp)
+add_executable(remove1 remove1.cpp)
