more work on data structures.

--- a/ch_data_structures/CMakeLists.txt
+++ b/ch_data_structures/CMakeLists.txt
@@ -19,3 +19,4 @@ add_executable(fill1 fill1.cpp)
 add_executable(numeric1 numeric1.cpp)
 add_executable(transform1 transform1.cpp)
 add_executable(remove1 remove1.cpp)
+add_executable(ranges1 ranges1.cpp)
