--- a/ch_qt/qt1/CMakeLists.txt
+++ b/ch_qt/qt1/CMakeLists.txt
@@ -7,21 +7,34 @@ set(CMAKE_AUTOUIC ON)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui)
+if (UNIX)
+    find_package(Qt5 COMPONENTS Widgets REQUIRED)
 
-qt_standard_project_setup()
+    add_executable(qt1
+        mainwindow.ui
+        mainwindow.cpp
+        main.cpp
+    )
 
-qt_add_executable(qt1
-    mainwindow.ui
-    mainwindow.cpp
-    main.cpp
-)
+    target_link_libraries(qt1 PRIVATE Qt5::Widgets)
+else()
+    find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui)
+
+    qt_standard_project_setup()
+
+    qt_add_executable(qt1
+        mainwindow.ui
+        mainwindow.cpp
+        main.cpp
+    )
+    target_link_libraries(qt1 PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui)
+
+    set_target_properties(qt1 PROPERTIES
+        WIN32_EXECUTABLE ON
+        MACOSX_BUNDLE ON
+    )
+endif()
+
 
 # resources.qrc
 
-target_link_libraries(qt1 PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui)
-
-set_target_properties(qt1 PROPERTIES
-    WIN32_EXECUTABLE ON
-    MACOSX_BUNDLE ON
-)
