More work on datastructures

--- a/ch_input_output/CMakeLists.txt
+++ b/ch_input_output/CMakeLists.txt
@@ -9,3 +9,4 @@ add_executable(files3 files3.cpp)
 add_executable(files4 files4.cpp)
 add_executable(files5 files5.cpp)
 add_executable(files6 files6.cpp)
+add_executable(files7 files7.cpp)
