--- a/ch_input_output/CMakeLists.txt
+++ b/ch_input_output/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(files4 files4.cpp)
 add_executable(files5 files5.cpp)
 add_executable(files6 files6.cpp)
 add_executable(files7 files7.cpp)
+add_executable(files8 files8.cpp)
