More work on input output.

--- a/ch_input_output/CMakeLists.txt
+++ b/ch_input_output/CMakeLists.txt
@@ -11,3 +11,5 @@ add_executable(files5 files5.cpp)
 add_executable(files6 files6.cpp)
 add_executable(files7 files7.cpp)
 add_executable(files8 files8.cpp)
+add_executable(files9 files9.cpp)
+add_executable(files10 files10.cpp)
