--- a/ch_threads/CMakeLists.txt
+++ b/ch_threads/CMakeLists.txt
@@ -1,1 +1,7 @@
-add_executable(threads1 threads1.cpp)
+add_executable(threads5 threads1.cpp)
+
+set_target_properties(
+    threads5
+    PROPERTIES
+    FOLDER "ch_threads"
+)
