Fixing Qt build on windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ IF(MSVC)
 ENDIF()
 
 find_package(Eigen3 CONFIG REQUIRED)
+find_package(Qt6 CONFIG REQUIRED)
 
 #find_package(VTK REQUIRED)
 #include("${VTK_USE_FILE}")
@@ -28,7 +29,7 @@ add_subdirectory(ch_control_structures)
 #add_subdirectory(ch_cpp_fortran)
 add_subdirectory(ch_data_structures)
 add_subdirectory(ch_modern)
-#add_subdirectory(ch_qt)
+add_subdirectory(ch_qt)
 add_subdirectory(ch_functions)
 add_subdirectory(ch_input_output)
 add_subdirectory(ch_iterating)
