--- a/ch_qt/drawing1/CMakeLists.txt
+++ b/ch_qt/drawing1/CMakeLists.txt
@@ -7,11 +7,22 @@ set(CMAKE_AUTOUIC ON)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui Qml Quick Charts)
+if (UNIX)
+    find_package(Qt5 COMPONENTS Widgets REQUIRED)
 
-qt_standard_project_setup()
+    add_executable(drawing1
+        mainwindow.ui
+        mainwindow.cpp
+        main.cpp
+    )
 
-qt_add_executable(drawing1
+    target_link_libraries(drawing1 PRIVATE Qt5::Widgets)
+else()
+    find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui)
+
+    qt_standard_project_setup()
+
+    qt_add_executable(drawing1
     drawing_kit.h
     drawing_kit.cpp
     drawing_area.h
@@ -22,13 +33,27 @@ qt_add_executable(drawing1
     mainwindow.cpp
     mainwindow.h
     main.cpp
+    )
+    target_link_libraries(drawing1 PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui Qt6::Qml Qt6::Quick Qt6::Charts)
+
+    set_target_properties(drawing1 PROPERTIES
+        WIN32_EXECUTABLE ON
+        MACOSX_BUNDLE ON
+    )
+
+    add_custom_command(TARGET drawing1 POST_BUILD 
+        COMMAND Qt6::windeployqt
+        ARGS $<TARGET_FILE:drawing1>
+    )
+endif()
+
+set_target_properties(
+    drawing1
+    PROPERTIES
+    FOLDER "ch_qt"
 )
+
 
 # resources.qrc
 
-target_link_libraries(drawing1 PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui Qt6::Qml Qt6::Quick Qt6::Charts)
 
-set_target_properties(drawing1 PROPERTIES
-    WIN32_EXECUTABLE ON
-    MACOSX_BUNDLE ON
-)
