--- a/ch_qt/qt3d1/CMakeLists.txt
+++ b/ch_qt/qt3d1/CMakeLists.txt
@@ -7,19 +7,27 @@ set(CMAKE_AUTOUIC ON)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-find_package(Qt6 COMPONENTS REQUIRED Widgets Core Gui Qml 3DCore 3DExtras 3DInput 3DRender)
+if (UNIX)
+    find_package(Qt5 COMPONENTS Widgets REQUIRED)
 
-qt_standard_project_setup()
+    add_executable(qt1
+        mainwindow.ui
+        mainwindow.cpp
+        main.cpp
+    )
 
-qt_add_executable(qt3d1
-    mainwindow.ui
-    mainwindow.cpp
-    mainwindow.h
-    main.cpp
-)
+    target_link_libraries(qt3d1 PRIVATE Qt5::Widgets)
+else()
+    find_package(Qt6 REQUIRED COMPONENTS Widgets Core Gui Qml 3DCore 3DExtras 3DInput 3DRender)
 
-target_link_libraries(qt3d1 PRIVATE
-    Qt6::Widgets
+    qt_standard_project_setup()
+
+    qt_add_executable(qt3d1
+        mainwindow.ui
+        mainwindow.cpp
+        main.cpp
+    )
+    target_link_libraries(qt3d1 PRIVATE Qt6::Widgets
     Qt6::Core
     Qt6::Gui
     Qt6::Qml
@@ -27,9 +35,26 @@ target_link_libraries(qt3d1 PRIVATE
     Qt6::3DExtras
     Qt6::3DInput
     Qt6::3DRender
+    )
+
+    set_target_properties(qt3d1 PROPERTIES
+        WIN32_EXECUTABLE ON
+        MACOSX_BUNDLE ON
+    )
+
+    add_custom_command(TARGET qt3d1 POST_BUILD 
+        COMMAND Qt6::windeployqt
+        ARGS $<TARGET_FILE:qt3d1>
+    )
+endif()
+
+set_target_properties(
+    qt3d1
+    PROPERTIES
+    FOLDER "ch_qt"
 )
 
-set_target_properties(qt3d1 PROPERTIES
-    WIN32_EXECUTABLE ON
-    MACOSX_BUNDLE ON
-)
+
+# resources.qrc
+
+
