Cleaning up Qt6 examples.

--- a/ch_qt/beam_app/CMakeLists.txt
+++ b/ch_qt/beam_app/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_AUTOMOC ON)
@@ -42,10 +42,14 @@ else()
     beam_view.cpp
     result_table_model.h
     result_table_model.cpp
+    output_redirector.h
+    output_redirector.cpp
+    logger.h
+    logger.cpp
     mainwindow.ui
     mainwindow.cpp
     mainwindow.h
-    main.cpp
+    main.cpp 
     )
     target_link_libraries(beam_app PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui Qt6::Qml Qt6::Quick Qt6::Charts)
 
