--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Scientific Programming in C++
+site_name: Scientific Programming in C++ (BETA)
 nav:
 - Introduction: index.md
 - History: history.md
